<resources>
    <string name="app_name">UNQ</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="unqlogo">UNQLogo</string>
    <string name="iniciarsesion">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="identificacion">Identificación</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="central">Cafetería Central</string>
    <string name="biologia">Cafetería Biologia</string>
    <string name="yuTakeuchi">Cafetería Yu Takeuchi</string>
    <string name="medicina">Cafetería Medicina</string>
    <string name="agronomia">Cafetería Agronomía</string>
    <string name="hemeroteca">Cafetería Hemeroteca</string>
    <string name="economia">Cafetería Economía</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancelar_turno">Cancelar Turno</string>
    <string name="esperando">Esperando turno para</string>
    <string name="tiempoesde">El tiempo de espera estimado es de:</string>


    <string name="lostpassword"><a href="" target="_top">¿Olvidaste la contraseña?</a></string>
    <string name="defaultpassword">¿No tienes cuenta? <a href="">Regístrate</a></string>
</resources>
